# elo_leaderboard

./: .env  .~lock.conceptsa.csv#  Cargo.toml  README.md  concepts.csv
pythonPullingConcept/: scrapeFromEloEverything.py
src/: main.rs
