[package]
name = "elo_leaderboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.14.2"
csv = "1.2.2"
dotenv = "0.15.0"
reqwest = {version = "0.11.20", features = ["json"]}
rocket = "0.4.11"
serde = "1.0.188"
serde_json = "1.0.106"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-native-tls"] }
strsim = "0.10.0"
tokio ={ version = "1.32.0", features = ["full"] }
